--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,60 @@ button:hover{
 .error {
     color: #b40f0f;
 }
+
+.main-content{
+    background-color: #f1f2f6;
+    padding: 3% 0;
+}
+.tbl-full{
+    width: 100%;
+}
+.wrapper {
+
+    padding: 1%;
+    width: 80%;
+    margin: 0 auto;
+}
+
+table tr th {
+    border-bottom: 1px solid black;
+    padding: 1%;
+    text-align: left;
+}
+table tr td {
+    padding: 1%;
+}
+.btn-primary {
+    background-color: #1e90ff;
+    padding: 2%;
+    color: white;
+    text-decoration: none;
+    font-weight:bold;
+}
+
+.btn-primary:hover {
+    background-color: #3742fa;
+}
+.btn-secondary {
+    background-color: #7bed9f;
+    padding: 2%;
+    color: black;
+    text-decoration: none;
+    font-weight:bold;
+
+}
+
+.btn-secondary:hover {
+    background-color: #2ed573;
+}
+.btn-danger {
+    background-color: #bd152b;
+    padding: 2%;
+    color: white;
+    text-decoration: none;
+    font-weight:bold;
+}
+
+.btn-danger:hover {
+    background-color: #ff4757;
+}
